--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.11",
+        "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^4.23.0",
         "@typescript-eslint/parser": "^4.23.0",
         "eslint": "^7.26.0",
@@ -22,6 +23,7 @@
         "typescript": "^4.2.4"
     },
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "uuid": "^8.3.2"
     }
 }
