--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
     app:
         build: . # build the app image
-        container_name: rentalx
+        container_name: rentx
         ports:
             - 3333:3333
         volumes:
