--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "license": "MIT",
     "scripts": {
-        "dev": "ts-node-dev --inspect --transpile-only --respawn --ignore-watch node_modules src/server.ts"
+        "dev": "ts-node-dev --inspect --transpile-only --respawn --ignore-watch node_modules src/server.ts",
+        "typeorm": "ts-node-dev ./node_modules/typeorm/cli "
     },
     "devDependencies": {
         "@types/express": "^4.17.11",
@@ -28,7 +29,10 @@
         "csv-parse": "^4.15.4",
         "express": "^4.17.1",
         "multer": "^1.4.2",
+        "pg": "^8.6.0",
+        "reflect-metadata": "^0.1.13",
         "swagger-ui-express": "^4.1.6",
+        "typeorm": "^0.2.32",
         "uuid": "^8.3.2"
     }
 }
