--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "pg": "^8.6.0",
         "reflect-metadata": "^0.1.13",
         "swagger-ui-express": "^4.1.6",
+        "tsyringe": "^4.5.0",
         "typeorm": "^0.2.32",
         "uuid": "^8.3.2"
     }
