--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "csv-parse": "^4.15.4",
         "express": "^4.17.1",
+        "express-async-errors": "^3.1.1",
         "multer": "^1.4.2",
         "pg": "^8.6.0",
         "reflect-metadata": "^0.1.13",
