--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "license": "MIT",
     "scripts": {
-        "dev": "ts-node-dev --inspect --transpile-only --respawn --ignore-watch node_modules src/server.ts",
+        "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --respawn --ignore-watch node_modules src/server.ts",
         "typeorm": "ts-node-dev ./node_modules/typeorm/cli "
     },
     "devDependencies": {
@@ -23,6 +23,7 @@
         "prettier": "^2.3.0",
         "ts-node": "^9.1.1",
         "ts-node-dev": "^1.1.6",
+        "tsconfig-paths": "^3.9.0",
         "typescript": "^4.2.4"
     },
     "dependencies": {
