--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "typeorm": "ts-node-dev ./node_modules/typeorm/cli "
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.11",
         "@types/multer": "^1.4.5",
         "@types/swagger-ui-express": "^4.1.2",
@@ -27,6 +28,7 @@
         "typescript": "^4.2.4"
     },
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "csv-parse": "^4.15.4",
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
