--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "class-transformer": "^0.4.0",
         "csv-parse": "^4.15.4",
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
