--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
             ],
             "@config/*": [
                 "config/*"
+            ],
+            "@utils/*": [
+                "utils/*"
             ]
         },
         "esModuleInterop": true,
