exclude jest.setup.ts from source files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,6 @@
         "resolveJsonModule": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true
-    }
+    },
+    "exclude": ["./jest.setup.ts"]
 }
