--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "csv-parse": "^4.15.4",
+    "dayjs": "^1.10.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jest": "^26.6.3",
