--- a/package.json
+++ b/package.json
@@ -1,54 +1,81 @@
 {
-  "name": "rentx",
-  "version": "1.0.0",
-  "license": "MIT",
-  "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --respawn --ignore-watch node_modules src/shared/infra/http/server.ts",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli ",
-    "test": "NODE_ENV=test jest --detectOpenHandles --runInBand",
-    "seed:admin": "ts-node-dev -r tsconfig-paths/register src/shared/infra/typeorm/seed/admin.ts"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.23",
-    "@types/jsonwebtoken": "^8.5.1",
-    "@types/multer": "^1.4.5",
-    "@types/supertest": "^2.0.11",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.23.0",
-    "@typescript-eslint/parser": "^4.23.0",
-    "eslint": "^7.26.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-import-helpers": "^1.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.3.0",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.1.6",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.4"
-  },
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "class-transformer": "^0.4.0",
-    "csv-parse": "^4.15.4",
-    "dayjs": "^1.10.5",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "jest": "^26.6.3",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.2",
-    "pg": "^8.6.0",
-    "reflect-metadata": "^0.1.13",
-    "swagger-ui-express": "^4.1.6",
-    "tsyringe": "^4.5.0",
-    "typeorm": "^0.2.32",
-    "uuid": "^8.3.2",
-    "supertest": "^6.1.3"
-  }
+    "name": "rentx",
+    "version": "1.0.0",
+    "license": "MIT",
+    "scripts": {
+        "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --respawn --ignore-watch node_modules src/shared/infra/http/server.ts",
+        "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli ",
+        "test": "NODE_ENV=test jest --detectOpenHandles --runInBand",
+        "seed:admin": "ts-node-dev -r tsconfig-paths/register src/shared/infra/typeorm/seed/admin.ts",
+        "prepare": "husky install"
+    },
+    "husky": {
+        "hooks": {
+            "prepare-commit-msg": "exec < /dev/tty && yarn cz --hook || true"
+        }
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "eslint --fix"
+        ],
+        "package.json": [
+            "sort-package-json"
+        ]
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "class-transformer": "^0.4.0",
+        "csv-parse": "^4.15.4",
+        "dayjs": "^1.10.5",
+        "express": "^4.17.1",
+        "express-async-errors": "^3.1.1",
+        "jest": "^26.6.3",
+        "jsonwebtoken": "^8.5.1",
+        "multer": "^1.4.2",
+        "pg": "^8.6.0",
+        "reflect-metadata": "^0.1.13",
+        "supertest": "^6.1.3",
+        "swagger-ui-express": "^4.1.6",
+        "tsyringe": "^4.5.0",
+        "typeorm": "^0.2.32",
+        "uuid": "^8.3.2"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^12.1.4",
+        "@commitlint/config-conventional": "^12.1.4",
+        "@commitlint/core": "^12.1.4",
+        "@types/bcrypt": "^5.0.0",
+        "@types/express": "^4.17.11",
+        "@types/jest": "^26.0.23",
+        "@types/jsonwebtoken": "^8.5.1",
+        "@types/multer": "^1.4.5",
+        "@types/supertest": "^2.0.11",
+        "@types/swagger-ui-express": "^4.1.2",
+        "@types/uuid": "^8.3.0",
+        "@typescript-eslint/eslint-plugin": "^4.23.0",
+        "@typescript-eslint/parser": "^4.23.0",
+        "commitizen": "^4.2.4",
+        "cz-conventional-changelog": "^3.3.0",
+        "eslint": "^7.26.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-import-resolver-typescript": "^2.4.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-import-helpers": "^1.1.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "husky": "^6.0.0",
+        "lint-staged": "^11.0.0",
+        "prettier": "^2.3.0",
+        "sort-package-json": "^1.50.0",
+        "ts-jest": "^26.5.6",
+        "ts-node": "^9.1.1",
+        "ts-node-dev": "^1.1.6",
+        "tsconfig-paths": "^3.9.0",
+        "typescript": "^4.2.4"
+    }
 }
