refactor: create docs directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
             ],
             "@utils/*": [
                 "utils/*"
+            ],
+            "@docs/*": [
+                "docs/*"
             ]
         },
         "esModuleInterop": true,
