--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "jest": "^26.6.3",
         "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.2",
+        "nodemailer": "^6.6.1",
         "pg": "^8.6.0",
         "reflect-metadata": "^0.1.13",
         "supertest": "^6.1.3",
