--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 API_URL=http://localhost:3333
+
+# Storage driver (disk or s3)
+STORAGE_DRIVER=disk
+
+# AWS Credentials
+AWS_BUCKET=
+AWS_ACESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
