--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         }
     },
     "dependencies": {
+        "aws-sdk": "^2.923.0",
         "bcrypt": "^5.0.1",
         "class-transformer": "^0.4.0",
         "csv-parse": "^4.15.4",
