--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,6 @@ STORAGE_DRIVER=disk
 
 # AWS Credentials
 AWS_BUCKET=
-AWS_ACESS_KEY_ID=
+AWS_BUCKET_REGION=
+AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
