--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
         "class-transformer": "^0.4.0",
         "csv-parse": "^4.15.4",
         "dayjs": "^1.10.5",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
         "handlebars": "^4.7.7",
         "jest": "^26.6.3",
         "jsonwebtoken": "^8.5.1",
+        "mime": "^2.5.2",
         "multer": "^1.4.2",
         "nodemailer": "^6.6.1",
         "pg": "^8.6.0",
@@ -58,6 +60,7 @@
         "@types/express": "^4.17.11",
         "@types/jest": "^26.0.23",
         "@types/jsonwebtoken": "^8.5.1",
+        "@types/mime": "^2.0.3",
         "@types/multer": "^1.4.5",
         "@types/nodemailer": "^6.4.2",
         "@types/supertest": "^2.0.11",
