feat: add aws ses mail provider

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,20 @@
+
 API_URL=http://localhost:3333
 
-# Storage driver (disk or s3)
+# disk or s3
 STORAGE_DRIVER=disk
 
+# ethereal or ses
+MAIL_DRIVER=ethereal
+
 # AWS Credentials
-AWS_BUCKET=
-AWS_BUCKET_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
+# AWS Bucket S3
+AWS_BUCKET=
+AWS_BUCKET_REGION=
+
+# AWS SES
+AWS_SES_REGION=
+AWS_SES_EMAIL_ADDRESS=
