CI: update build job environment variables

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,6 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          port: ${{ secrets.PORT }}
-          source: "."
+          port: ${{ secrets.SSH_PORT }}
+          source: "., !node_modules"
           target: "~/ignite-app/RentX"
