--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,17 +14,22 @@ services:
         volumes:
             - pgdata:/data/postgres
 
-    app:
-        build: . # build the app image
-        container_name: rentx
+    redis:
+        image: redis:alpine
         ports:
-            - 3333:3333
-        volumes:
-            - .:/usr/app
-        links:
-            - db_postgres
-        depends_on:
-            - db_postgres
+            - 6379:6379
+
+    # app:
+    #     build: . # build the app image
+    #     container_name: rentx
+    #     ports:
+    #         - 3333:3333
+    #     volumes:
+    #         - .:/usr/app
+    #     links:
+    #         - db_postgres
+    #     depends_on:
+    #         - db_postgres
 
 volumes:
     pgdata:
