chore: add redis env variables

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ AWS_BUCKET_REGION=
 # AWS SES
 AWS_SES_REGION=
 AWS_SES_EMAIL_ADDRESS=
+
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
